--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                           <div class="inner"> <i class="icon-netease_music"></i> 
                           <span>网易云音乐</span> </div> </div> </a> 
 
-                          <a href="https://github.com/begonia-not-raining" target="_blank"> 
+                          <a href="https://github.com/Claus-Qogi" target="_blank"> 
                           <div class="item"> <div class="bg" style="background-color:#353535"></div> 
                           <div class="inner"> <i class="icon-github"></i> <span>Github</span> </div> </div> </a> 
 
