--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                  <div class="clear col-3"> 
 
 
-                 <a href="http://begonia-not-raining.jlacg.xyz/" target="_blank"> 
+                 <a href="https://flowus.cn/share/0b04f909-a345-4e4c-b668-b1c7ba255c47" target="_blank"> 
                  <div class="item"> 
                  <div class="bg" style="background-color:#28a9e0"></div> 
                  <div class="inner"> <span>博客</span> </div> </div> </a>
